# mcp-servers

./: .gitignore  README.md
filesystem/: main.py  pyproject.toml
filesystem/filesystem/: server.py
memory/: .gitignore  pyproject.toml
memory/memory/: server.py
memory/src/memory/: __init__.py  server.py
pdfreader/: main.py  pyproject.toml
pdfreader/pdfreader/: __main__.py  server.py
rag/: pyproject.toml
rag/src/: embedding.py  load_docs.py  server.py
thinking/: main.py  pyproject.toml
time/: main.py  pyproject.toml
websearch/: main.py  pyproject.toml
