[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.15.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]
[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
memory = "memory:main"
