[project]
name = "pdfreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "mcp>=1.15.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
]

[project.scripts]
vinay-mcp-pdfreader = "pdfreader:main"
