[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.120.0",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0.0",
    "mcp[cli]>=1.19.0",
    "pip>=25.3",
    "pypdf>=6.1.3",
    "rapidocr-onnxruntime>=1.4.4",
    "tqdm>=4.67.1",
]
